.evidence/v1.5/raw/kani-list-json-command.txt
Kani Rust Verifier 0.67.0 (cargo plugin)
   Compiling proc-macro2 v1.0.106
   Compiling unicode-ident v1.0.24
   Compiling quote v1.0.46
   Compiling serde_core v1.0.228
   Compiling shlex v2.0.1
   Compiling find-msvc-tools v0.1.9
   Compiling zmij v1.0.21
   Compiling camino v1.2.4
   Compiling thiserror v2.0.18
   Compiling winnow v1.0.3
   Compiling serde_json v1.0.150
   Compiling tinyvec_macros v0.1.1
   Compiling hashbrown v0.17.1
   Compiling equivalent v1.0.2
   Compiling serde v1.0.228
   Compiling cpufeatures v0.3.0
   Compiling cfg-if v1.0.4
   Compiling memchr v2.8.2
   Compiling arrayref v0.3.9
   Compiling toml_datetime v1.1.1+spec-1.1.0
   Compiling constant_time_eq v0.4.2
   Compiling toml_writer v1.1.1+spec-1.1.0
   Compiling itoa v1.0.18
   Compiling arrayvec v0.7.8
   Compiling tinyvec v1.11.0
   Compiling cc v1.2.65
   Compiling blake3 v1.8.5
   Compiling unicode-normalization v0.1.25
   Compiling syn v2.0.118
   Compiling indexmap v2.14.0
   Compiling thiserror-impl v2.0.18
   Compiling serde_derive v1.0.228
   Compiling toml_parser v1.1.2+spec-1.1.0
   Compiling toml_edit v0.25.12+spec-1.1.0
   Compiling titania-core v0.1.0 (/home/lewis/src/titania/crates/titania-core)
   Compiling titania-aggregate v0.1.0 (/home/lewis/src/titania/crates/titania-aggregate)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 2.68s
   Compiling memchr v2.8.2
   Compiling serde_core v1.0.228
   Compiling zmij v1.0.21
   Compiling serde_json v1.0.150
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.17.1
   Compiling tree-sitter-language v0.1.7
   Compiling itoa v1.0.18
   Compiling regex-syntax v0.8.11
   Compiling crossbeam-utils v0.8.21
   Compiling crossbeam-epoch v0.9.20
   Compiling streaming-iterator v0.1.9
   Compiling same-file v1.0.6
   Compiling libc v0.2.186
   Compiling bit-vec v0.9.1
   Compiling log v0.4.33
   Compiling smallvec v1.15.2
   Compiling tree-sitter-rust v0.24.2
   Compiling walkdir v2.5.0
   Compiling indexmap v2.14.0
   Compiling bit-set v0.10.0
   Compiling aho-corasick v1.1.4
   Compiling bstr v1.12.3
   Compiling crossbeam-deque v0.8.6
   Compiling wait-timeout v0.2.1
   Compiling regex-automata v0.4.14
   Compiling serde v1.0.228
   Compiling toml_datetime v1.1.1+spec-1.1.0
   Compiling serde_spanned v1.1.1
   Compiling camino v1.2.4
   Compiling toml_edit v0.25.12+spec-1.1.0
   Compiling titania-core v0.1.0 (/home/lewis/src/titania/crates/titania-core)
   Compiling tree-sitter v0.26.10
   Compiling titania-check v0.1.0 (/home/lewis/src/titania/crates/titania-check)
   Compiling regex v1.12.4
   Compiling globset v0.4.18
   Compiling ignore v0.4.27
   Compiling titania-policy v0.1.0 (/home/lewis/src/titania/crates/titania-policy)
   Compiling titania-aggregate v0.1.0 (/home/lewis/src/titania/crates/titania-aggregate)
   Compiling titania-output v0.1.0 (/home/lewis/src/titania/crates/titania-output)
   Compiling ast-grep-core v0.44.1
   Compiling ast-grep-language v0.44.1
   Compiling titania-lanes v0.1.0 (/home/lewis/src/titania/crates/titania-lanes)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 3.93s
   Compiling titania-core v0.1.0 (/home/lewis/src/titania/crates/titania-core)
warning: Found the following unsupported constructs:
             - caller_location (1)
             - foreign function (2)
         
         Verification will fail if one or more of these constructs is reachable.
         See https://model-checking.github.io/kani/rust-feature-support.html for more details.

    Finished `dev` profile [unoptimized + debuginfo] target(s) in 1.53s
   Compiling serde_core v1.0.228
   Compiling winnow v1.0.3
   Compiling serde_json v1.0.150
   Compiling toml_writer v1.1.1+spec-1.1.0
   Compiling anyhow v1.0.103
   Compiling dylint_internal v6.0.1
   Compiling rustversion v1.0.22
   Compiling paste v1.0.15
   Compiling aho-corasick v1.1.4
   Compiling serde_spanned v1.1.1
   Compiling toml_datetime v1.1.1+spec-1.1.0
   Compiling semver v1.0.28
   Compiling cargo-platform v0.3.0
   Compiling toml_parser v1.1.2+spec-1.1.0
   Compiling toml v1.1.2+spec-1.1.0
   Compiling cargo_metadata v0.23.1
   Compiling regex-automata v0.4.14
   Compiling regex v1.12.4
   Compiling dylint_linting v6.0.1
error[E0463]: can't find crate for `rustc_driver`
   --> /cache/cargo-shared/registry/src/index.crates.io-1949cf8c6b5b557f/dylint_linting-6.0.1/src/lib.rs:199:1
    |
199 | extern crate rustc_driver;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate
    |
    = help: maybe you need to install the missing components with: `rustup component add rust-src rustc-dev llvm-tools-preview`

error[E0463]: can't find crate for `rustc_data_structures`
   --> /cache/cargo-shared/registry/src/index.crates.io-1949cf8c6b5b557f/dylint_linting-6.0.1/src/lib.rs:201:1
    |
201 | extern crate rustc_data_structures;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate
    |
    = help: maybe you need to install the missing components with: `rustup component add rust-src rustc-dev llvm-tools-preview`

error[E0463]: can't find crate for `rustc_session`
   --> /cache/cargo-shared/registry/src/index.crates.io-1949cf8c6b5b557f/dylint_linting-6.0.1/src/lib.rs:202:1
    |
202 | extern crate rustc_session;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate
    |
    = help: maybe you need to install the missing components with: `rustup component add rust-src rustc-dev llvm-tools-preview`

error[E0463]: can't find crate for `rustc_span`
   --> /cache/cargo-shared/registry/src/index.crates.io-1949cf8c6b5b557f/dylint_linting-6.0.1/src/lib.rs:203:1
    |
203 | extern crate rustc_span;
    | ^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate
    |
    = help: maybe you need to install the missing components with: `rustup component add rust-src rustc-dev llvm-tools-preview`

error[E0463]: can't find crate for `rustc_errors`
   --> /cache/cargo-shared/registry/src/index.crates.io-1949cf8c6b5b557f/dylint_linting-6.0.1/src/lib.rs:690:1
    |
690 | extern crate rustc_errors;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate
    |
    = help: maybe you need to install the missing components with: `rustup component add rust-src rustc-dev llvm-tools-preview`

For more information about this error, try `rustc --explain E0463`.
error: could not compile `dylint_linting` (lib) due to 5 previous errors
error: Failed to execute cargo (exit status: 101). Found 5 compilation errors.
